Изменение запросов к песочнице